@@ -9,15 +9,18 @@
             <tr>
                 {% for column in table_header %}
                     {% with forloop.counter0 as col_index %}
-                        <th scope="col" {% cell_classname 0 col_index %}>
-                            {% if column.strip %}
-                                {% if html_renderer %}
-                                    {{ column.strip|safe|linebreaksbr }}
-                                {% else %}
-                                    {{ column.strip|linebreaksbr }}
+                        {% cell_hidden 0 col_index as is_hidden %}
+                        {% if not is_hidden %}
+                            <th scope="col" {% cell_classname 0 col_index %} {% cell_span 0 col_index %}>
+                                {% if column.strip %}
+                                    {% if html_renderer %}
+                                        {{ column.strip|safe|linebreaksbr }}
+                                    {% else %}
+                                        {{ column.strip|linebreaksbr }}
+                                    {% endif %}
                                 {% endif %}
-                            {% endif %}
-                        </th>
+                            </th>
+                        {% endif %}
                     {% endwith %}
                 {% endfor %}
             </tr>
@@ -29,26 +32,29 @@
                 <tr>
                     {% for column in row %}
                         {% with forloop.counter0 as col_index %}
-                            {% if first_col_is_header and forloop.first %}
-                                <th scope="row" {% cell_classname row_index col_index table_header %}>
-                                    {% if column.strip %}
-                                        {% if html_renderer %}
-                                            {{ column.strip|safe|linebreaksbr }}
-                                        {% else %}
-                                            {{ column.strip|linebreaksbr }}
+                            {% cell_hidden row_index col_index table_header as is_hidden %}
+                            {% if not is_hidden %}
+                                {% if first_col_is_header and forloop.first %}
+                                    <th scope="row" {% cell_classname row_index col_index table_header %} {% cell_span row_index col_index table_header %}>
+                                        {% if column.strip %}
+                                            {% if html_renderer %}
+                                                {{ column.strip|safe|linebreaksbr }}
+                                            {% else %}
+                                                {{ column.strip|linebreaksbr }}
+                                            {% endif %}
                                         {% endif %}
-                                    {% endif %}
-                                </th>
-                            {% else %}
-                                <td {% cell_classname row_index col_index table_header %}>
-                                    {% if column.strip %}
-                                        {% if html_renderer %}
-                                            {{ column.strip|safe|linebreaksbr }}
-                                        {% else %}
-                                            {{ column.strip|linebreaksbr }}
+                                    </th>
+                                {% else %}
+                                    <td {% cell_classname row_index col_index table_header %} {% cell_span row_index col_index table_header %}>
+                                        {% if column.strip %}
+                                            {% if html_renderer %}
+                                                {{ column.strip|safe|linebreaksbr }}
+                                            {% else %}
+                                                {{ column.strip|linebreaksbr }}
+                                            {% endif %}
                                         {% endif %}
-                                    {% endif %}
-                                </td>
+                                    </td>
+                                {% endif %}
                             {% endif %}
                         {% endwith %}
                     {% endfor %}
